реализация api настроек поискового сервиса
